src/objects/AF_OOPS_Estimate__c.object
<CustomObject>
    <description>Will represent the out of pocket expense estimation agreed upon between Unilever and an agency for a particular brand</description>
    <fields>
        <fullName>AF_Adaptation__c</fullName>
        <description>Store the Adapation figure</description>
        <label>Adaptation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Adjusted_estimate_1__c</fullName>
        <description>Calculate the value for qtr based on which qtr we are in and total value</description>
        <formula>IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q4&quot;), 1,
	IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q3&quot;), 0.75,
		IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q2&quot;), 0.5,
			IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q1&quot;), 0.25, 0))))
* AF_Estimate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted estimate 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Adjusted_estimate_2__c</fullName>
        <description>Calculate value based on previous value and current value</description>
        <formula>IF(ISBLANK( AF_Previous_Quarter_Estimate__c),null, AF_Adjusted_estimate_1__c -  AF_Previous_Quarter_Estimate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted estimate 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Account__c</fullName>
        <description>Stores the Agency Account Name</description>
        <formula>AF_Agency_Entity__r.AF_Agency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Entity_Column_Name__c</fullName>
        <description>AgencyFee#GLOBAL#To store the Agency entity column name</description>
        <label>Agency Entity Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To Store the Agency Entity Associated to Entity</description>
        <label>Agency Entity</label>
        <referenceTo>AF_Entity__c</referenceTo>
        <relationshipLabel>OOPS Estimates</relationshipLabel>
        <relationshipName>OOPS_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Agency_ExchangeRateTemp__c</fullName>
        <label>Agency ExchangeRateTemp</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Exchange_Rate__c</fullName>
        <description>AgencyFee#GLOBAL#To store Agency exchange rate values</description>
        <label>Agency Exchange Rate</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Agency_Spot_Rate__c</fullName>
        <description>AgencyFee#GLOBAL#To store the Agency Spot Rate values</description>
        <label>Agency Spot Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Agreed_Base_Fee_is_0__c</fullName>
        <description>Used for a roll up summary on OOPS Actual which counts number of blank or 0 Agreed Base Fee OOPS Estimates</description>
        <formula>IF(
	OR(
		AF_Agreed_Base_Fees__c = 0,
		ISBLANK(AF_Agreed_Base_Fees__c)
	),
	1,
	0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreed Base Fee is 0</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Agreed_Base_Fees__c</fullName>
        <description>AgencyFee#GLOBAL#To store the Agreed base fees</description>
        <label>Agreed Base Fees</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To check whether the OOPS Estimate is Archived or not</description>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Estimate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To relate OOPs Estimate to brand estimates</description>
        <label>Brand Estimate</label>
        <referenceTo>AF_Brand_Estimate__c</referenceTo>
        <relationshipLabel>OOPS Estimates</relationshipLabel>
        <relationshipName>OOPS_Estimates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Brand__c</fullName>
        <formula>AF_OOPS_Actual__r.AF_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Compound_key__c</fullName>
        <description>Composite Key used for quickly fiding all OOPS estimate records for the purpose of calculating total (yearly) PO value.</description>
        <formula>AF_OOPS_Actual__r.AF_Fiscal_year__c +&apos;|&apos;+CASESAFEID (AF_Agency_Entity__r.AF_Agency__c)+&apos;|&apos;+CASESAFEID (AF_OOPS_Actual__r.AF_Brand__c)+&apos;|&apos;+Agency_Entity_Name__c+&apos;|&apos;+Unilever_Entity_Name__c</formula>
        <inlineHelpText>Composite Key used for quickly fiding all OOPS estimate records for the purpose of calculating total (yearly) PO value.</inlineHelpText>
        <label>Compound key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_CountNoQuarters__c</fullName>
        <formula>case(AF_JustQuarters__c ,
&quot;Q1&quot;,1,
&quot;Q1Q2&quot;,2,
&quot;Q1Q3&quot;,3,
&quot;Q1Q4&quot;,4,
&quot;Q2&quot;,1,
&quot;Q2Q3&quot;,2,
&quot;Q2Q4&quot;,3,
&quot;Q3&quot;,1,
&quot;Q3Q4&quot;,2,
&quot;Q4&quot;,1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountNoQuarters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Digital__c</fullName>
        <description>Stores the Digital Value</description>
        <label>Digital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_EstimateLocal__c</fullName>
        <description>Formula to work out estimate local value based on status</description>
        <formula>if( text(AF_Status__c) =&quot;Ready for PO&quot; &amp;&amp; not(isnull(AF_Ready_For_PO_Exchange_Rate__c)),
 AF_OOPS_Estimate_Local__c,
AF_Estimate__c  *  AF_Agency_Exchange_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Estimate_Local_Old__c</fullName>
        <description>Not used</description>
        <label>Estimate Local Old</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Estimate_Local__c</fullName>
        <description>AgencyFee#GLOBAL#To store the local Estimates for OOPs Estimates</description>
        <label>Estimate Local</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Estimate_Overall__c</fullName>
        <description>Calculate the Totals OOPS based on base fees and overall %</description>
        <formula>AF_Agreed_Base_Fees__c *   AF_OOPS_Actual__r.Overall__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Overall</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Estimate__c</fullName>
        <description>AgencyFee#GLOBAL#To Store the Estimated values for OOPs Estimate</description>
        <label>Estimate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Fiscal_Year_FF__c</fullName>
        <formula>AF_OOPS_Actual__r.AF_Fiscal_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year FF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Fiscal_Year__c</fullName>
        <description>AgencyFee#GLOBAL#To store the fiscal year related values</description>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_IsCrossBorderImage__c</fullName>
        <description>Formula to show red box if this is a cross border</description>
        <formula>if( AF_IsCrossBorder__c , IMAGE($Label.AF_AgencyUrlLink+&quot;/resource/AF_isTax&quot;, &quot;CrossBorder&quot; ,15,15) ,&quot;&quot;)</formula>
        <label>IsCrossBorderImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_IsCrossBorder__c</fullName>
        <description>Checks to see if Agency and unilever countries are different - if so marks as cross border</description>
        <formula>IF(AND( TEXT(AF_Unilever_Entity__r.AF_Country__c) != TEXT(AF_Agency_Entity__r.AF_Country__c), AF_Estimate__c !=0.00)  , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCrossBorder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Is_Crossborder_Wk__c</fullName>
        <description>This will be autopopulated by workflow.</description>
        <label>Is Crossborder</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_JustQuarters__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(AF_OOPS_Actual__r.Name,AF_OOPS_Actual__r.AF_Brand__r.Name, &quot;&quot;),AF_Agency_Account__c ,&quot;&quot;), AF_Fiscal_Year__c ,&quot;&quot;),&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JustQuarters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>AgencyFee#GLOBAL#To check the status for OOPs Estimate</description>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_MatrixCodeTemp__c</fullName>
        <label>MatrixCodeTemp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Max_Quarter__c</fullName>
        <description>Calculates the max qtr</description>
        <formula>IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q4&quot;), &quot;Q4&quot;,
	IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q3&quot;), &quot;Q3&quot;,
		IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q2&quot;), &quot;Q2&quot;,
			IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q1&quot;), &quot;Q1&quot;, null))))</formula>
        <label>Max Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Mean_Quarter__c</fullName>
        <formula>IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q1&quot;), &quot;Q0&quot;, 
IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q2&quot;), &quot;Q1&quot;, 
IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q3&quot;), &quot;Q2&quot;, 
IF(INCLUDES(AF_OOPS_Actual__r.Quarter__c, &quot;Q4&quot;), &quot;Q3&quot;, null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mean Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_No_of_Quaters__c</fullName>
        <description>Calculates no of quarters</description>
        <formula>if( AF_OOPS_Actual__r.AF_Q1__c &gt;0,1,0) + if( AF_OOPS_Actual__r.AF_Q2__c &gt;0,1,0)+if( AF_OOPS_Actual__r.AF_Q3__c &gt;0,1,0)+if( AF_OOPS_Actual__r.AF_Q4__c &gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Quaters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_OOPS_Actual__c</fullName>
        <description>Parent record of oops estimate</description>
        <label>OOPS Actual</label>
        <referenceTo>AF_OOPS_Actual__c</referenceTo>
        <relationshipLabel>OOPS Estimates</relationshipLabel>
        <relationshipName>OOPS_Estimates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AF_OOPS_Code__c</fullName>
        <defaultValue>&quot;EUR&quot;</defaultValue>
        <description>Default currency code</description>
        <label>OOPS Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_OOPS_Estimate_Local__c</fullName>
        <description>show the local value of estimate</description>
        <label>OOPS Estimate Local</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_OOPS_Matrix_Currency_Code__c</fullName>
        <description>Currency code that is used before ready for po</description>
        <label>OOPS Matrix Currency Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Overall_OOPS__c</fullName>
        <description>AgencyFee#GLOBAL#To store the values for overall OOPs</description>
        <label>Overall OOPS %</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_OverridePO_Adaptation_LC__c</fullName>
        <description>This field is used to override the PO Adaptation value for the PO report of OOPSEstimate</description>
        <label>Override PO Adaptation – LC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_OverridePO_Digital_LC__c</fullName>
        <label>Override PO Digital – LC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Override_Estimate_Local__c</fullName>
        <label>Override Estimate Local</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_PO_Number__c</fullName>
        <description>Stores PO number from ariba</description>
        <label>PO Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_PO_Report_Type__c</fullName>
        <formula>&quot;OOPS&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Report Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_PO_Value_LC_2014__c</fullName>
        <formula>AF_EstimateLocal__c *0.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Value - LC 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_PO_value_euro2014__c</fullName>
        <formula>AF_Estimate__c *0.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Value - Euro 2014</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Previous_PO_Value__c</fullName>
        <description>Stores previous po value</description>
        <label>Previous PO Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Previous_Quarter_Estimate__c</fullName>
        <description>Not used</description>
        <label>Prev Q Adjusted Estimate 1</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Previous_Quarter_Value__c</fullName>
        <description>Stores the value of previous quarters value</description>
        <label>Previous Quarter Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Previous_Quarters_Done__c</fullName>
        <description>Stores no of previous quarters</description>
        <label>Previous Quarters Done</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quarter_PO_Raised__c</fullName>
        <description>Calculates the PO Value</description>
        <formula>CASE(AF_Previous_Quarters_Done__c, 
0, AF_Estimate__c / If(AF_No_of_Quaters__c&gt;0,AF_No_of_Quaters__c,1) , 
1, (AF_Estimate__c / If(AF_No_of_Quaters__c&gt;0,AF_No_of_Quaters__c,1))*0.25- AF_Previous_PO_Value__c , 
2, (AF_Estimate__c / If(AF_No_of_Quaters__c&gt;0,AF_No_of_Quaters__c,1))*0.5- AF_Previous_PO_Value__c , 
3, (AF_Estimate__c / If(AF_No_of_Quaters__c&gt;0,AF_No_of_Quaters__c,1))*0.75- AF_Previous_PO_Value__c , 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter PO Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Quarter__c</fullName>
        <description>AgencyFee#GLOBAL#To store the related values for Quarter</description>
        <label>Quarter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_QuatersAlreadyDone__c</fullName>
        <formula>case( SUBSTITUTE(SUBSTITUTE(AF_JustQuarters__c, &quot; &quot;, &quot;&quot;),&quot;-&quot;,&quot;&quot;) , 
&quot;Q1&quot;,0, 
&quot;Q1Q2&quot;,0, 
&quot;Q1Q3&quot;,0, 
&quot;Q1Q4&quot;,0, 
&quot;Q2&quot;,1, 
&quot;Q2Q3&quot;,1, 
&quot;Q2Q4&quot;,1, 
&quot;Q3&quot;,2, 
&quot;Q3Q4&quot;,2, 
&quot;Q4&quot;,3,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuatersAlreadyDone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Rate_Currency__c</fullName>
        <description>AgencyFee#GLOBAL#To store the currency rate</description>
        <label>Rate Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Rate_Type__c</fullName>
        <description>AgencyFee#GLOBAL#To Store the values for Rate type</description>
        <label>Rate Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Ready_For_PO_Entry_Currency__c</fullName>
        <description>Stores the ready for PO Currency</description>
        <label>Ready For PO Entry Currency</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Ready_For_PO_Exchange_Rate__c</fullName>
        <description>Stores the ready for PO Currency exchange rate</description>
        <label>Ready For PO Exchange Rate</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_ReadyforPOExchangeRateTemp__c</fullName>
        <label>ReadyforPOExchangeRateTemp</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_ReadyforPoCodeTemp__c</fullName>
        <label>ReadyforPoCodeTemp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Status__c</fullName>
        <description>AgencyFee#GLOBAL#To store the Status for OOPS Estimate</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>with agency (draft)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>with category finance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>with agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>with CMCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AF_Total__c</fullName>
        <formula>AF_Adaptation__c +  AF_Digital__c +  AF_Traditional__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Traditional__c</fullName>
        <description>Stores the Tradition value</description>
        <label>Traditional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Unilever_Entity_Column_Name__c</fullName>
        <description>AgencyFee#GLOBAL#To store column names for Unilever entity.</description>
        <label>Unilever Entity Column Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Unilever_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AgencyFee#GLOBAL#To store Unilever Entity values associated to Entity</description>
        <label>Unilever Entity</label>
        <referenceTo>AF_Entity__c</referenceTo>
        <relationshipLabel>OOPS Estimates (Unilever entity)</relationshipLabel>
        <relationshipName>OOPS_Estimates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_isCommentImage__c</fullName>
        <description>Formula to show blue box is there is a comment</description>
        <formula>if( AF_isComment__c , IMAGE( $Label.AF_AgencyUrlLink+&quot;/resource/AF_isComment&quot;, &quot;Comment&quot; ,15,15) ,&quot; &quot;)</formula>
        <label>isCommentImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_isComment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks whether a comment has been created against the record</description>
        <label>isComment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency_Entity_Name__c</fullName>
        <description>Stores the entity name</description>
        <formula>AF_Agency_Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDfromPilot__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>IDfromPilot</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracks to see if cell has been changed</description>
        <label>IsUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unilever_Entity_Name__c</fullName>
        <description>Stores the Unilever Entity Name</description>
        <formula>AF_Unilever_Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unilever Entity Name</label>
        <type>Text</type>
    </fields>
    <label>OOPS Estimate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AF_OOPS_Actual__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OOPS Estimate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OOPS Estimates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>